--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-[DATE] – Added orbital switching using F1–F5 keys
+[14.11 2025] – Added orbital switching using F1–F5 keys
 - Implemented switching between d-orbitals (d_z2, d_x2-y2, d_xy, d_xz, d_yz)
 - Added 'currentOrbital' variable and 'orbitalChanged' flag to track changes
 - Updated probability_3d_z2() function to support all five d-orbitals
